@@ -26,6 +26,7 @@ no_index:
 requires:
   Error::Pure: 0.27
   Exporter: 0
+  List::Util: 0
   Readonly: 0
   perl: 5.8.0
 resources:
